--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Config PRD
 spring.application.name=encontrapets-backend-user
-server.port=8084
+server.port=${PORT:8080}
 jwt.secret=${SECRET_KEY_ENV} 
 jwt.expiration=86400000
 spring.datasource.hikari.schema=encontrapetsdb
