--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #Config PRD
 spring.application.name=encontrapets-backend-user
+spring.datasource.hikari.pool-name=encontrapets-backend-user-pool
 server.port=${PORT:8080}
 jwt.secret=${SECRET_KEY_ENV} 
 jwt.expiration=86400000
